Refactor system config scripts and add dev/test utilities
Split system configuration into modular scripts for input devices, security/privacy, and system apps. Added dev_scripts for linting, formatting, and testing, along with corresponding test files. Enhanced install.sh with self-update and improved logging. Updated readme with new aliases, functions, and dev instructions. Various improvements to dotfiles installation, VS Code setup, and system configuration scripts for better maintainability and clarity.

--- a/config.toml
+++ b/config.toml
@@ -79,4 +79,8 @@ settings = [
 "051_configure_system_ui_ux.sh" = true
 "052_configure_finder_and_sidebar.sh" = true
 "053_configure_power_management.sh" = true
+"054_configure_input_devices.sh" = true
+"055_configure_security_privacy.sh" = true
+"056_configure_system_apps.sh" = true
 "099_set_wallpaper.sh" = true
+"999_cleanup.sh" = true
