--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,4 +25,9 @@ jobs:
       - uses: actions/checkout@v3
       
       - name: Run Install Script in Dry Run Mode
-        run: ./install.sh --dry-run
+        run: |
+          ./install.sh --dry-run
+          chmod +x tests/test_ui_flags.sh || true
+          ./tests/test_ui_flags.sh
+          chmod +x tests/test_integrity.sh || true
+          ./tests/test_integrity.sh
