Add resume and logs test to CI, update docs and tests
Included tests/test_resume_and_logs.sh in CI workflow for improved coverage of logging and resume features. Updated readme.md with new aliases, functions, and documentation for logs and resume CLI flags. Enhanced test_resume_and_logs.sh to run only the failed script during resume-failure tests and improved exit flag validation.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,5 +29,7 @@ jobs:
           ./install.sh --dry-run
           chmod +x tests/test_ui_flags.sh || true
           ./tests/test_ui_flags.sh
+          chmod +x tests/test_resume_and_logs.sh || true
+          ./tests/test_resume_and_logs.sh
           chmod +x tests/test_integrity.sh || true
           ./tests/test_integrity.sh
