Add recent() function and improve set_user_default
Introduces the recent() function to quickly cd into the most recently modified project directory. Enhances set_user_default to support type inference and key deletion, with a new integration test for its behavior. Updates aliases and documentation to clarify repos alias and recent() usage, and adds related test cases.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,5 +31,7 @@ jobs:
           ./tests/test_ui_flags.sh
           chmod +x tests/test_resume_and_logs.sh || true
           ./tests/test_resume_and_logs.sh
+          chmod +x tests/test_set_user_default_integration.sh || true
+          ./tests/test_set_user_default_integration.sh
           chmod +x tests/test_integrity.sh || true
           ./tests/test_integrity.sh
