Update CI workflow to use multi-line run step
Changed the 'run' step in the CI workflow to use multi-line syntax for improved readability and future extensibility.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,4 +14,5 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: No-op
-        run: echo "CI placeholder: lint/format/tests are run in separate workflows"
+        run: |
+          echo "CI placeholder: lint/format/tests are run in separate workflows"
