--- a/.github/workflows/apply-format.yml
+++ b/.github/workflows/apply-format.yml
@@ -1,8 +1,12 @@
 name: Apply Formatting
 
 on:
-  pull_request:
-    branches: [ main ]
+  # Run when the format check workflow completes (so apply-format only runs
+  # after format validation finishes). We will gate execution to only run
+  # when the "Format Check" workflow completed with a failure.
+  workflow_run:
+    workflows: ["Format Check"]
+    types: [completed]
   workflow_dispatch: {}
 
 permissions:
@@ -11,6 +15,8 @@ permissions:
 jobs:
   apply-format:
     runs-on: ubuntu-latest
+    # Only run the job when the upstream format workflow concluded with 'failure'
+    if: ${{ github.event.workflow_run.conclusion == 'failure' }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
