Add alias/function conflict check to installer
Introduces scripts/011_check_aliases_functions_conflicts.sh to detect duplicate and conflicting alias/function names before dotfiles installation. Updates installer logic and documentation to run this check prior to dotfile changes, renames install script to 012_install_dotfiles.sh, and adds a test for the conflict checker. Updates config.toml and readme.md to reflect new script order and functionality.

--- a/config.toml
+++ b/config.toml
@@ -48,7 +48,8 @@ settings = [
 "008_install_cli_tools.sh" = true
 "009_install_fonts.sh" = true
 "010_install_apps.sh" = true
-"011_install_dotfiles.sh" = true
+"011_check_aliases_functions_conflicts.sh" = true
+"012_install_dotfiles.sh" = true
 "020_configure_firefox_policies.sh" = true
 "020_install_firefox.sh" = true
 "021_install_vscode.sh" = true
